err/repoze.cssutils.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/cssutils'...
Listing './lib/python3.5/site-packages/repoze/cssutils/common'...
Compiling './lib/python3.5/site-packages/repoze/cssutils/common/path.py'...
***   File "./lib/python3.5/site-packages/repoze/cssutils/common/path.py", line 728
    def mkdir(self, mode=0777):
                            ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/repoze/cssutils/common/testrunner.py'...
***   File "./lib/python3.5/site-packages/repoze/cssutils/common/testrunner.py", line 142
    if msg: print msg
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/repoze/cssutils/dom.py'...
***   File "./lib/python3.5/site-packages/repoze/cssutils/dom.py", line 39
    def matchesNode(self, (namespace, tagName)):
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repoze/cssutils/parser.py'...
***   File "./lib/python3.5/site-packages/repoze/cssutils/parser.py", line 534
    except self.ParseError, err:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/repoze/cssutils/tests'...
Compiling './lib/python3.5/site-packages/repoze/cssutils/tests/test_css.py'...
***   File "./lib/python3.5/site-packages/repoze/cssutils/tests/test_css.py", line 74
    def assertEqualFn(result, (name, params)):
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repoze/cssutils/tests/test_css_cascade.py'...
***   File "./lib/python3.5/site-packages/repoze/cssutils/tests/test_css_cascade.py", line 73
    def assertEqualFn(result, (name, params)):
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repoze/cssutils/tests/test_css_media.py'...
***   File "./lib/python3.5/site-packages/repoze/cssutils/tests/test_css_media.py", line 47
    except CSSParseError, err:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/repoze.cssutils-1.0a6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
